--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,14 +3,14 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-#[[main]]
-#  name = "Home"
-#  url = "#about"
-#  weight = 10
+[[main]]
+  name = "Home"
+  url = "#about"
+  weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Recent Activities"
+  url = "#recents"
   weight = 20
 
 [[main]]
@@ -24,9 +24,24 @@
   weight = 30
 
 [[main]]
-  name = "Team"
-  url = "#people"
+  name = "Blogs"
+  url = "blogs/"
+  weight = 50
+
+[[main]]
+  name = "Discussions"
+  url = "discussions/"
   weight = 60
+
+[[main]]
+  name = "Team"
+  url = "team/"
+  weight = 70
+
+[[main]]
+  name = "Contact"
+  url = "#contact"
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
