--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,6 +19,11 @@
   weight = 40
 
 [[main]]
+  name = "Papers We Read"
+  url = "https://vlgiitr.github.io/papers_we_read/"
+  weight = 41
+
+[[main]]
   name = "Publications"
   url = "#publications"
   weight = 30
