--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -33,10 +33,10 @@
   url = "blogs/"
   weight = 60
 
-# [[main]]
-#   name = "Open Projects"
-#   url = "open_projects/"
-#   weight = 61
+[[main]]
+  name = "Open Projects"
+  url = "open_projects/"
+  weight = 61
 
 # [[main]]
 #  name = "Recruitments"
