Minor Updates. Move archieved stuff to archieves page

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -33,11 +33,6 @@
   url = "blogs/"
   weight = 60
 
-[[main]]
-  name = "Open Projects"
-  url = "open_projects/"
-  weight = 61
-
 # [[main]]
 #  name = "Recruitments"
 #  url = "recruitments/"
@@ -57,6 +52,11 @@
   name = "Contact"
   url = "#contact"
   weight = 90
+
+[[main]]
+  name = "Archives"
+  url = "archives/"
+  weight = 91
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
