--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -33,10 +33,10 @@
   url = "blogs/"
   weight = 60
 
-# [[main]]
-#  name = "Recruitments"
-#  url = "recruitments/"
-#  weight = 62
+[[main]]
+  name = "Recruitments"
+  url = "recruitments/"
+  weight = 62
 
 [[main]]
   name = "Discussions"
